tests/concurrency/valid/releaseLock.wacc
begin
    lock l;
    release l
end