tests/concurrency/semanticErr/releaseNonLock.wacc
begin
    int x = 4;
    release x
end